Começar a implementar a funcionalidade de click em javascript

--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -955,7 +955,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #FFFFFF; }
+  color: #FFFFFF;
+  display: none; }
 
 .postais__heading {
   font-weight: 700;
