--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -942,7 +942,10 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    display: block; }
+    display: none; }
+
+.postais__figure-title--show {
+      display: block; }
 
 .postais__info {
   position: absolute;
@@ -951,12 +954,14 @@ body {
   left: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.7);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: #FFFFFF;
-  display: none; }
+  display: none;
+  color: #FFFFFF; }
+
+.postais__info--show {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
 
 .postais__heading {
   font-weight: 700;
