Finalizado a funcionalidade do Modal e alguns ajustes no CSS

--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -617,32 +617,6 @@ html {
 body {
   box-sizing: border-box; }
 
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1000;
-  display: none; }
-
-.modal__content {
-    position: fixed;
-    height: 90vh;
-    width: 90%;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    background-color: #FFFFFF; }
-
-.modal-show {
-    display: block; }
-
-.modal-open {
-    overflow: hidden; }
-
 .u-margin-left-xs {
   margin-left: 1rem !important; }
 
@@ -711,6 +685,22 @@ body {
   100% {
     -webkit-transform: translateX(-70%);
             transform: translateX(-70%); } }
+
+@-webkit-keyframes loaderSpinners {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em; }
+  40% {
+    box-shadow: 0 2.5em 0 0; } }
+
+@keyframes loaderSpinners {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em; }
+  40% {
+    box-shadow: 0 2.5em 0 0; } }
 
 .navigation__checkbox {
   display: none; }
@@ -907,7 +897,83 @@ body {
 
 .icon--close {
     background-image: url(../images/icons/close.svg);
-    cursor: pointer; }
+    cursor: pointer;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+    transition: all .3s; }
+
+.icon--close:hover {
+      -webkit-transform: rotate(180deg);
+              transform: rotate(180deg); }
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+  display: none; }
+
+.modal__wrapper {
+    position: fixed;
+    height: 80vh;
+    width: 90%;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    background-color: #FFFFFF; }
+
+.modal__content {
+    width: 90%;
+    height: 85%;
+    margin: 6rem auto;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start; }
+
+.modal-show {
+    display: block; }
+
+.modal-open {
+    overflow: hidden; }
+
+.loader, .loader:before, .loader::after {
+  border-radius: 50%;
+  width: 1.5em;
+  height: 1.5em;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+  -webkit-animation: loaderSpinner 1.8s infinite ease-in-out;
+          animation: loaderSpinner 1.8s infinite ease-in-out; }
+
+.loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #60504D;
+  font-size: 1.2rem;
+  -webkit-animation-delay: -0.16s;
+          animation-delay: -0.16s; }
+
+.loader:before, .loader:after {
+  content: '';
+  position: absolute;
+  top: 0; }
+
+.loader:before {
+  left: -3rem;
+  -webkit-animation-delay: -0.32s;
+          animation-delay: -0.32s; }
+
+.loader:after {
+  left: 3rem; }
 
 .museu__complete-content {
   height: 0;
@@ -1018,15 +1084,6 @@ body {
   font-weight: 300;
   font-size: 1.5rem; }
 
-.postais__modal-content {
-  width: 90%;
-  height: 80%;
-  margin: 6rem auto;
-  overflow-y: scroll;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start; }
-
 .educacao__nav {
   width: 95%;
   margin: 0 auto; }
@@ -1082,15 +1139,6 @@ body {
   background-color: #EBECE7;
   z-index: 200;
   transition: left .3s ease-out; }
-
-.escolas__close-icon {
-    -webkit-transform: rotate(0);
-            transform: rotate(0);
-    transition: all .3s; }
-
-.escolas__close-icon:hover {
-      -webkit-transform: rotate(180deg) scale(1.2);
-              transform: rotate(180deg) scale(1.2); }
 
 .escolas-show {
     left: 0; }
