--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -586,7 +586,7 @@ body {
   margin: 0 auto;
   padding-bottom: 1.5rem;
   border-bottom: solid 1px #AE9C8D;
-  margin-top: 5rem;
+  margin-top: 4rem;
   font-weight: 700; }
 
 .heading-postais {
@@ -927,7 +927,7 @@ body {
     background-color: #FFFFFF;
     z-index: 1010;
     padding-top: 6rem;
-    padding-bottom: 2rem; }
+    padding-bottom: 4rem; }
 
 .modal__content {
     width: 90%;
@@ -1148,18 +1148,20 @@ body {
 
 .escolas__nav {
     width: 70%;
-    margin: 5rem auto 0 auto; }
+    margin: 4rem auto 0 auto; }
 
 .escolas__list {
     display: flex;
     flex-direction: column;
-    align-items: center; }
+    align-items: center;
+    justify-content: space-between;
+    height: 50vh; }
 
 .escolas__item {
     list-style: none; }
 
 .escolas__item:not(:last-child) {
-      margin-bottom: 4rem; }
+      margin-bottom: 5vh; }
 
 .escolas__link {
     display: block;
