--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -1367,6 +1367,14 @@ body {
 .contactos__submit {
   align-self: flex-start; }
 
+.contactos__mapa {
+  width: 100%;
+  height: 50rem; }
+
+#mapaLocalizacao {
+  width: 100%;
+  height: 50rem; }
+
 .footer {
   background-color: #4C4845; }
 
