--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -579,6 +579,10 @@ body {
     right: 0;
     z-index: -1; }
 
+.heading-primary--s::before {
+    font-size: 4.8rem;
+    top: -40%; }
+
 .heading-secondary {
   font-size: 2.3rem;
   font-weight: 700;
@@ -1029,8 +1033,8 @@ body {
     width: 100%;
     -webkit-transform: scale(1.1);
             transform: scale(1.1);
-    -webkit-filter: brightness(40%);
-            filter: brightness(40%); }
+    -webkit-filter: brightness(50%);
+            filter: brightness(50%); }
 
 .valencias__content {
     position: absolute;
@@ -1166,7 +1170,7 @@ body {
 .educacao__pp-titulo {
   font-size: 1.7rem; }
 
-.escolas {
+.escolas-navigation {
   width: 100%;
   position: fixed;
   top: 0;
@@ -1176,27 +1180,27 @@ body {
   z-index: 200;
   transition: left .3s ease-out; }
 
-.escolas-show {
+.escolas-navigation-show {
     left: 0; }
 
-.escolas__nav {
+.escolas-navigation__nav {
     width: 70%;
     margin: 4rem auto 0 auto; }
 
-.escolas__list {
+.escolas-navigation__list {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
     height: 50vh; }
 
-.escolas__item {
+.escolas-navigation__item {
     list-style: none; }
 
-.escolas__item:not(:last-child) {
+.escolas-navigation__item:not(:last-child) {
       margin-bottom: 5vh; }
 
-.escolas__link {
+.escolas-navigation__link {
     display: block;
     text-decoration: none;
     color: #60504D;
@@ -1204,7 +1208,7 @@ body {
     font-size: 2rem;
     text-align: center; }
 
-.escolas__link-small {
+.escolas-navigation__link--small {
       display: block;
       font-size: 1.5rem;
       font-weight: 300; }
@@ -1340,7 +1344,7 @@ body {
             animation-name: fingerswipe; }
 
 .contactos__form {
-  width: 32rem;
+  width: 28rem;
   margin: 0 auto;
   display: flex;
   flex-direction: column; }
@@ -1373,7 +1377,7 @@ body {
 
 #mapaLocalizacao {
   width: 100%;
-  height: 50rem; }
+  height: 100%; }
 
 .footer {
   background-color: #4C4845; }
