--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -954,26 +954,49 @@ body {
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 1000;
-  display: none; }
+  display: none;
+  /*&__wrapper {
+        position: absolute;
+        height: auto;
+        max-height: 80vh;
+        width: 90%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: $white;
+        z-index: 1010;
+        padding-top: 6rem;
+        padding-bottom: 4rem;
+        border-radius: 8px;
+    }*/
+  /*&__content {
+        width: 90%;
+        height: auto;
+        margin: 0 auto;
+        overflow-y: scroll;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+    }*/ }
 
 .modal__wrapper {
-    position: fixed;
-    height: 80vh;
+    position: absolute;
     width: 90%;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
     background-color: #FFFFFF;
-    z-index: 1010;
-    padding-top: 6rem;
-    padding-bottom: 4rem; }
+    z-index: 1010; }
+
+.modal__header, .modal__footer {
+    height: 5rem;
+    background-color: red; }
 
 .modal__content {
-    width: 90%;
-    height: 100%;
-    margin: 0 auto;
-    overflow-y: scroll;
+    background-color: aquamarine;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -1090,12 +1113,12 @@ body {
     width: 100%; }
 
 .postais__figure-title {
-    background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8));
+    background-color: rgba(0, 0, 0, 0.2);
     color: #FFFFFF;
     font-size: 1.5rem;
     line-height: 2;
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
     right: 0;
     display: none; }
@@ -1182,7 +1205,7 @@ body {
     justify-content: space-between;
     width: 100%;
     background-color: #FFFFFF;
-    box-shadow: 0 0.2rem 0.8rem rgba(76, 72, 69, 0.15); }
+    box-shadow: 0 0.2rem 0.8rem rgba(76, 72, 69, 0.2); }
 
 .educacao__actividades-card:not(:last-child) {
       margin-bottom: 2rem; }
@@ -1372,7 +1395,8 @@ body {
 
 .galeria__image {
     display: block;
-    width: 100%; }
+    width: 100%;
+    cursor: pointer; }
 
 .galeria__finger-swipe {
     width: 3rem;
