--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -968,16 +968,6 @@ body {
         padding-top: 6rem;
         padding-bottom: 4rem;
         border-radius: 8px;
-    }*/
-  /*&__content {
-        width: 90%;
-        height: auto;
-        margin: 0 auto;
-        overflow-y: scroll;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        justify-content: flex-start;
     }*/ }
 
 .modal__wrapper {
@@ -991,16 +981,17 @@ body {
     z-index: 1010; }
 
 .modal__header, .modal__footer {
-    height: 5rem;
-    background-color: red; }
+    height: 5rem; }
 
 .modal__content {
-    background-color: aquamarine;
     overflow-y: auto;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start; }
+    align-items: stretch;
+    justify-content: flex-start;
+    max-height: 70vh;
+    padding-left: 1.2rem;
+    padding-right: 1.2rem; }
 
 .modal-show {
     display: block; }
