--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -659,6 +659,9 @@ body {
   margin-left: 1rem !important; }
 
 .u-margin-left-s {
+  margin-left: 2rem !important; }
+
+.u-margin-left-m {
   margin-left: 3rem !important; }
 
 .u-margin-bottom-xs {
@@ -757,107 +760,184 @@ body {
   40% {
     box-shadow: 0 2.5em 0 0; } }
 
+.navigation {
+  position: relative; }
+
 .navigation__checkbox {
-  display: none; }
+    display: none; }
 
 .navigation__button {
-  width: 4rem;
-  height: 4rem;
-  background-color: #EBECE7;
-  position: fixed;
-  top: 3rem;
-  right: 2.5rem;
-  text-align: center;
-  border-radius: 50%;
-  box-shadow: 0 0 2rem rgba(96, 80, 77, 0.5);
-  z-index: 100;
-  cursor: pointer; }
+    width: 4rem;
+    height: 4rem;
+    background-color: #EBECE7;
+    position: fixed;
+    top: 3rem;
+    right: 2.5rem;
+    text-align: center;
+    border-radius: 50%;
+    box-shadow: 0 0 2rem rgba(96, 80, 77, 0.5);
+    z-index: 100;
+    cursor: pointer; }
+
+@media only screen and (min-width: 768px) {
+      .navigation__button {
+        background-color: #AE9C8D;
+        width: 6rem;
+        height: 6rem;
+        top: -10rem; } }
 
 .navigation__icon {
-  position: relative;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%); }
+    position: relative;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%); }
 
 .navigation__icon, .navigation__icon::before, .navigation__icon::after {
-    width: 1.6rem;
-    height: 2px;
-    background-color: #60504D;
-    display: inline-block; }
+      width: 1.6rem;
+      height: 2px;
+      background-color: #60504D;
+      display: inline-block; }
+
+@media only screen and (min-width: 768px) {
+        .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+          background-color: #EBECE7;
+          width: 2.6rem;
+          height: 4px; } }
 
 .navigation__icon::before, .navigation__icon::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    transition: all .2s; }
+      content: "";
+      position: absolute;
+      left: 0;
+      transition: all .2s; }
 
 .navigation__icon::before {
-    top: -.6rem; }
+      top: -.6rem; }
+
+@media only screen and (min-width: 768px) {
+        .navigation__icon::before {
+          top: -.9rem; } }
 
 .navigation__icon::after {
-    top: .6rem;
-    width: 1rem; }
+      top: .6rem;
+      width: 1rem; }
+
+@media only screen and (min-width: 768px) {
+        .navigation__icon::after {
+          top: .9rem;
+          width: 1.8rem; } }
 
 .navigation__checkbox:checked + .navigation__button .navigation__icon {
-  background-color: transparent; }
+    background-color: transparent; }
 
 .navigation__checkbox:checked + .navigation__button .navigation__icon::before {
-  top: 0;
-  -webkit-transform: rotate(135deg);
-          transform: rotate(135deg); }
+    top: 0;
+    -webkit-transform: rotate(135deg);
+            transform: rotate(135deg); }
 
 .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
-  top: 0;
-  width: 1.6rem;
-  -webkit-transform: rotate(-135deg);
-          transform: rotate(-135deg); }
+    top: 0;
+    width: 1.6rem;
+    -webkit-transform: rotate(-135deg);
+            transform: rotate(-135deg); }
+
+@media only screen and (min-width: 768px) {
+      .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
+        width: 2.6rem; } }
 
 .navigation__nav {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  background-color: #EBECE7;
-  z-index: 50;
-  top: -100%;
-  transition: all .3s; }
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: #EBECE7;
+    z-index: 50;
+    top: -100vh;
+    transition: all .3s; }
+
+@media only screen and (min-width: 768px) {
+      .navigation__nav {
+        position: absolute;
+        right: 2rem;
+        top: 0;
+        background-color: transparent;
+        width: auto; } }
 
 .navigation__list {
-  text-align: center;
-  font-size: 2.6rem;
-  line-height: 2;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  list-style: none; }
+    text-align: center;
+    font-size: 2.6rem;
+    line-height: 2;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    list-style: none; }
+
+@media only screen and (min-width: 480px) and (orientation: landscape) {
+      .navigation__list {
+        width: 60%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        top: 60%;
+        left: 40%; } }
+
+@media only screen and (min-width: 768px) {
+      .navigation__list {
+        text-align: right;
+        top: 5vh;
+        left: auto;
+        right: 1rem;
+        -webkit-transform: none;
+                transform: none;
+        font-size: 3rem;
+        line-height: 2.2; } }
+
+@media only screen and (min-width: 480px) and (orientation: landscape) {
+    .navigation__item {
+      flex-basis: 50%; } }
 
 .navigation__link:link, .navigation__link:visited {
-  display: block;
-  text-decoration: none;
-  color: #60504D; }
+    display: block;
+    text-decoration: none;
+    color: #60504D;
+    cursor: pointer; }
+
+@media only screen and (min-width: 768px) {
+      .navigation__link:link, .navigation__link:visited {
+        color: #FFFFFF;
+        font-weight: 300; } }
 
 .navigation__social {
-  position: absolute;
-  text-align: center;
-  left: 50%;
-  bottom: 3%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%); }
+    position: absolute;
+    text-align: center;
+    left: 50%;
+    bottom: 3%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%); }
+
+@media only screen and (min-width: 480px) and (orientation: landscape) {
+      .navigation__social {
+        right: 1.5rem;
+        left: auto; } }
+
+@media only screen and (min-width: 768px) {
+      .navigation__social {
+        display: none; } }
 
 .navigation__social-facebook {
-    width: 3rem;
-    height: 3rem; }
+      width: 3rem;
+      height: 3rem; }
 
 .navigation__checkbox:checked ~ .navigation__nav {
-  top: 0; }
+    top: 0; }
 
 .header {
   width: 100%;
   height: 100vh;
   background-image: url(../images/mobileBG.jpg);
   background-size: cover;
-  background-position: center bottom; }
+  background-position: center bottom;
+  position: relative; }
 
 @media only screen and (min-width: 768px) {
     .header {
@@ -865,14 +945,34 @@ body {
       background-position: 70% 100%;
       background-size: cover; } }
 
+.header__btn-box {
+    display: none;
+    position: absolute;
+    bottom: 10vh;
+    left: 2.5rem; }
+
 .logo {
   width: 18rem;
   height: auto;
   padding-top: 2rem;
   padding-left: 2rem; }
 
+@media only screen and (min-width: 768px) {
+    .logo {
+      width: 25rem;
+      padding-top: 5rem;
+      padding-left: 3rem; } }
+
 .logo--menu {
     width: 35%; }
+
+@media only screen and (min-width: 480px) and (orientation: landscape) {
+      .logo--menu {
+        width: 20%; } }
+
+@media only screen and (min-width: 768px) {
+      .logo--menu {
+        display: none; } }
 
 .scroll-icon,
 .scroll-icon::before {
@@ -888,6 +988,10 @@ body {
   margin-top: -35px;
   box-shadow: inset 0 0 0 1px #FFFFFF;
   border-radius: 25px; }
+
+@media only screen and (min-width: 768px) {
+    .scroll-icon {
+      display: none; } }
 
 .scroll-icon::before {
     content: '';
@@ -922,6 +1026,11 @@ body {
   text-decoration: none;
   font-size: 1.3rem; }
 
+@media only screen and (min-width: 768px) {
+    .btn {
+      font-size: 1.6rem;
+      height: 4rem; } }
+
 .btn-primary {
     border: solid 1px #60504D;
     color: #60504D; }
@@ -929,6 +1038,10 @@ body {
 .btn-secondary {
     background-color: #60504D;
     color: #FFFFFF; }
+
+.btn-secondary--grey {
+      background-color: #EBECE7;
+      color: #60504D; }
 
 .btn-postais {
     border: solid 1px #FFFFFF;
@@ -950,8 +1063,16 @@ body {
   width: 1.6rem;
   height: 1.7rem; }
 
+@media only screen and (min-width: 768px) {
+    .icon {
+      width: 2.2rem;
+      height: 2rem; } }
+
 .icon--video-camera {
     background-image: url(../images/icons/video-camera.svg); }
+
+.icon--video-camera--grey {
+      background-image: url(../images/icons/video-camera-grey.svg); }
 
 .icon--pdf {
     background-image: url(../images/icons/pdf.svg); }
