--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -555,6 +555,17 @@ button.swiper-pagination-bullet{border:none;margin:0;padding:0;box-shadow:none;-
 
 .swiper-container-coverflow .swiper-wrapper{-ms-perspective:1200px}
 
+/*
+.site-header {
+    padding: 2rem;
+    font-size: 1.8rem;
+    @include mediaquerie('tablet-wide') {
+        padding-top: 4rem;
+        font-size: 2.4rem;
+    }
+}
+*/
+
 body {
   font-family: 'Dosis', sans-serif;
   font-weight: 300;
@@ -568,18 +579,30 @@ body {
   color: #60504D;
   position: relative; }
 
+@media only screen and (min-width: 768px) {
+    .heading-primary {
+      text-align: left;
+      margin-left: 4rem;
+      font-size: 5rem; } }
+
 .heading-primary::before {
     content: attr(data-section-title);
     color: rgba(235, 236, 231, 0.25);
     font-size: 6.1rem;
     display: block;
     position: absolute;
-    top: -60%;
+    top: -4rem;
     left: 0;
     right: 0;
     z-index: -1; }
 
-.heading-primary--s::before {
+@media only screen and (min-width: 768px) {
+      .heading-primary::before {
+        font-size: 8rem !important;
+        top: -5.5rem !important;
+        left: -3.5rem; } }
+
+.heading-primary--small::before {
     font-size: 4.8rem;
     top: -40%; }
 
@@ -627,17 +650,6 @@ body {
 .p-medium {
   font-weight: 500; }
 
-/*
-.site-header {
-    padding: 2rem;
-    font-size: 1.8rem;
-    @include mediaquerie('tablet-wide') {
-        padding-top: 4rem;
-        font-size: 2.4rem;
-    }
-}
-*/
-
 *,
 *::after,
 *::before {
@@ -650,7 +662,7 @@ html {
 
 @media only screen and (min-width: 640px) {
     html {
-      font-size: 75%; } }
+      font-size: 80%; } }
 
 body {
   box-sizing: border-box; }
@@ -782,9 +794,13 @@ body {
 @media only screen and (min-width: 768px) {
       .navigation__button {
         background-color: #AE9C8D;
-        width: 6rem;
-        height: 6rem;
-        top: -10rem; } }
+        width: 4.5rem;
+        height: 4.5rem;
+        top: -5rem;
+        transition: top .3s; } }
+
+.navigation__button--show {
+      top: 2.5rem; }
 
 .navigation__icon {
     position: relative;
@@ -801,8 +817,8 @@ body {
 @media only screen and (min-width: 768px) {
         .navigation__icon, .navigation__icon::before, .navigation__icon::after {
           background-color: #EBECE7;
-          width: 2.6rem;
-          height: 4px; } }
+          width: 2.2rem;
+          height: 3px; } }
 
 .navigation__icon::before, .navigation__icon::after {
       content: "";
@@ -815,7 +831,7 @@ body {
 
 @media only screen and (min-width: 768px) {
         .navigation__icon::before {
-          top: -.9rem; } }
+          top: -.7rem; } }
 
 .navigation__icon::after {
       top: .6rem;
@@ -823,8 +839,8 @@ body {
 
 @media only screen and (min-width: 768px) {
         .navigation__icon::after {
-          top: .9rem;
-          width: 1.8rem; } }
+          top: .7rem;
+          width: 1.2rem; } }
 
 .navigation__checkbox:checked + .navigation__button .navigation__icon {
     background-color: transparent; }
@@ -842,24 +858,16 @@ body {
 
 @media only screen and (min-width: 768px) {
       .navigation__checkbox:checked + .navigation__button .navigation__icon::after {
-        width: 2.6rem; } }
+        width: 2.2rem; } }
 
-.navigation__nav {
+.navigation__float {
     position: fixed;
     width: 100%;
     height: 100vh;
     background-color: #EBECE7;
     z-index: 50;
     top: -100vh;
-    transition: all .3s; }
-
-@media only screen and (min-width: 768px) {
-      .navigation__nav {
-        position: absolute;
-        right: 2rem;
-        top: 0;
-        background-color: transparent;
-        width: auto; } }
+    transition: top .3s; }
 
 .navigation__list {
     text-align: center;
@@ -882,17 +890,6 @@ body {
         left: 50%;
         font-size: 2.2rem; } }
 
-@media only screen and (min-width: 768px) {
-      .navigation__list {
-        text-align: right;
-        top: 5vh;
-        left: auto;
-        right: 1rem;
-        -webkit-transform: none;
-                transform: none;
-        font-size: 3rem;
-        line-height: 2.2; } }
-
 @media only screen and (min-width: 480px) and (orientation: landscape) {
     .navigation__item {
       flex-basis: 50%; } }
@@ -902,11 +899,6 @@ body {
     text-decoration: none;
     color: #60504D;
     cursor: pointer; }
-
-@media only screen and (min-width: 768px) {
-      .navigation__link:link, .navigation__link:visited {
-        color: #FFFFFF;
-        font-weight: 300; } }
 
 .navigation__social {
     position: absolute;
@@ -921,16 +913,31 @@ body {
         right: 1.5rem;
         left: auto; } }
 
-@media only screen and (min-width: 768px) {
-      .navigation__social {
-        display: none; } }
-
 .navigation__social-facebook {
       width: 3rem;
       height: 3rem; }
 
-.navigation__checkbox:checked ~ .navigation__nav {
+.navigation__checkbox:checked ~ .navigation__float {
     top: 0; }
+
+.navigation__main {
+    position: absolute;
+    right: 2.5rem;
+    top: 3.5rem;
+    z-index: 40; }
+
+.navigation__main__list {
+      text-align: right;
+      font-size: 2.6rem;
+      line-height: 2.2;
+      top: 5vh;
+      list-style: none; }
+
+.navigation__main__link:link, .navigation__main__link:visited {
+      display: block;
+      text-decoration: none;
+      color: #FFFFFF;
+      cursor: pointer; }
 
 .header {
   width: 100%;
@@ -949,7 +956,7 @@ body {
 .header__btn-box {
     display: none !important;
     position: absolute;
-    bottom: 10vh;
+    bottom: 8vh;
     left: 2.5rem; }
 
 @media only screen and (min-width: 768px) {
@@ -964,8 +971,8 @@ body {
 
 @media only screen and (min-width: 768px) {
     .logo {
-      width: 25rem;
-      padding-top: 5rem;
+      width: 20rem;
+      padding-top: 3rem;
       padding-left: 3rem; } }
 
 .logo--menu {
@@ -977,7 +984,7 @@ body {
 
 @media only screen and (min-width: 768px) {
       .logo--menu {
-        display: none; } }
+        width: 16rem; } }
 
 .scroll-icon,
 .scroll-icon::before {
@@ -1017,7 +1024,12 @@ body {
   padding: 5rem 1rem;
   max-width: 1970px;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  overflow: hidden; }
+
+@media only screen and (min-width: 768px) {
+    .wrapper {
+      padding: 5rem 3rem; } }
 
 .page-section {
   padding: 5rem 0 5rem 0; }
@@ -1033,7 +1045,7 @@ body {
 
 @media only screen and (min-width: 768px) {
     .btn {
-      font-size: 1.4rem;
+      font-size: 1.2rem;
       height: 3.5rem; } }
 
 .btn-primary {
@@ -1044,10 +1056,10 @@ body {
     background-color: #60504D;
     color: #FFFFFF; }
 
-.btn-secondary--grey {
-      background-color: #EBECE7;
-      color: #60504D;
-      box-shadow: 0 0.4rem 2rem rgba(0, 0, 0, 0.8); }
+.btn-tertiary {
+    background-color: #EBECE7;
+    color: #60504D;
+    box-shadow: 0 0.4rem 2rem rgba(0, 0, 0, 0.8); }
 
 .btn-postais {
     border: solid 1px #FFFFFF;
@@ -1071,8 +1083,8 @@ body {
 
 @media only screen and (min-width: 768px) {
     .icon {
-      width: 2.2rem;
-      height: 2rem; } }
+      width: 1.8rem;
+      height: 1.6rem; } }
 
 .icon--video-camera {
     background-image: url(../images/icons/video-camera.svg); }
@@ -1213,7 +1225,9 @@ body {
 @media only screen and (min-width: 768px) {
       .valencias__image {
         position: absolute;
-        top: -40%; } }
+        top: -40%;
+        -webkit-transform: scale(1);
+                transform: scale(1); } }
 
 .valencias__content {
     position: absolute;
@@ -1508,7 +1522,7 @@ body {
   background-color: #EBECE7; }
 
 .precario__table {
-  margin: 0 auto;
+  margin: 6rem auto;
   position: relative;
   border-spacing: 1px; }
 
