--- a/dev/assets/styles/styles.css
+++ b/dev/assets/styles/styles.css
@@ -632,6 +632,10 @@ body {
   font-weight: 500;
   color: #AE9C8D; }
 
+.sub-heading--secondary {
+  font-size: 1.4rem;
+  color: #FFFFFF; }
+
 .heading-postais {
   font-size: 1.8rem;
   margin-bottom: 2.4rem;
@@ -647,6 +651,11 @@ body {
 
 .paragraph__strong {
     font-weight: 700; }
+
+.paragraph--small {
+  color: #EBECE7;
+  font-weight: 300;
+  font-size: .94rem; }
 
 .extraInfo-small {
   font-weight: 300; }
@@ -963,7 +972,8 @@ body {
 .navigation__main {
     display: block;
     position: absolute;
-    right: 4rem;
+    width: 18rem;
+    right: 0;
     top: 3.5rem;
     z-index: 40; }
 
@@ -976,9 +986,10 @@ body {
         display: none; } }
 
 .navigation__main__list {
+      width: 100%;
       text-align: right;
       font-size: 2.6rem;
-      line-height: 2.2;
+      line-height: 2;
       top: 5vh;
       list-style: none; }
 
@@ -986,11 +997,26 @@ body {
         .navigation__main__list {
           font-size: 2.4rem; } }
 
+.navigation__main__item {
+      width: 100%; }
+
 .navigation__main__link:link, .navigation__main__link:visited {
       display: block;
       text-decoration: none;
       color: #FFFFFF;
-      cursor: pointer; }
+      cursor: pointer;
+      padding-right: 3rem;
+      position: relative;
+      background-image: linear-gradient(45deg, transparent 0%, transparent 50%, rgba(90, 78, 66, 0.7) 50%);
+      background-size: 230%;
+      transition: all .6s; }
+
+@media only screen and (min-width: 1248px) {
+        .navigation__main__link:link, .navigation__main__link:visited {
+          padding-right: 4rem; } }
+
+.navigation__main__link:hover {
+      background-position: 100%; }
 
 .header {
   width: 100%;
@@ -1011,6 +1037,24 @@ body {
       background-image: url(../images/DSC_5433.jpg);
       background-position: 70% 100%;
       background-size: cover; } }
+
+.header__text-box {
+    position: absolute;
+    bottom: 13rem;
+    left: 2.5rem;
+    width: 28rem;
+    display: none; }
+
+@media only screen and (min-width: 768px) {
+      .header__text-box {
+        display: block; } }
+
+@media only screen and (min-width: 1248px) {
+      .header__text-box {
+        width: 33.5rem; } }
+
+.header__missao {
+    margin-bottom: 2rem; }
 
 .header__btn-box {
     display: none !important;
@@ -1055,7 +1099,7 @@ body {
 .scroll-icon {
   width: 2.5rem;
   height: 4.5rem;
-  bottom: 8vh;
+  bottom: 11vh;
   margin-top: -35px;
   box-shadow: inset 0 0 0 1px #FFFFFF;
   border-radius: 25px; }
